Added fail safe retry on first occurrence of missing journal entries

--- a/core/src/main/resources/reference.conf
+++ b/core/src/main/resources/reference.conf
@@ -453,6 +453,10 @@ jdbc-read-journal {
     # The ask timeout to use when querying the journal sequence actor, the actor should normally repond very quickly,
     # since it always replies with its current internal state
     ask-timeout = 1 second
+
+    # Set this to fail fast when a gap is encountered. The developer
+    # must handle the broken stream in this scenario.
+    failFast = false
   }
 
   tables {
